# edit-video

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/edit_video/: __init__.py  __main__.py  _version.py  cli.py  exceptions.py  ffmpeg.py  logo_scale.py  process.py
src/edit_video/web/: __init__.py  __main__.py  app.py  config.py  io_util.py  server.py
src/edit_video/web/static/: styles.css
src/edit_video/web/templates/: index.html
tests/: test_batch_workers.py  test_cli.py  test_ffmpeg.py  test_io_util.py  test_logo_scale.py  test_web.py
